# fin-advisor

./: .dockerignore  .gitignore  20260220_advisor.md  AGENT_GUIDE.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fred_api_key  pyproject.toml  requirements.txt
dashboard/: app.py
docs/: 2026-03-11-session.md  agent-context.md
journals/: 20260220_investment_journal.md  20260220_status.md  20260225_geneone_analysis.md  20260225_portfolio_holdings.md  20260225_solana_analysis.md  20260226_portfolio_debate.md  20260304_RISK_SUMMARY.md  20260304_currency_risk_review_5.md  20260304_fx_risk_visual_summary.txt  20260304_risk_manager_review_2.md  20260304_risk_review_7_sector_correlation.md  20260304_valuation_risk_review.md  20260304_valuation_risk_summary.txt  20260304_veto_declaration.txt  20260304_war_risk_analysis.md  20260306_hynix_risk_review.md  20260306_hynix_trading_strategy.md  20260310_portfolio_rebalance_strategy.md  20260312_portfolio_debate_oil_crisis.md  project_evolution.md
scripts/: analyze_kr_market.py  collect_fred_data.py  collect_market_data.py  collect_news.py  daily_analysis.py  event_collector.py  global_scan.py  hynix_entry_monitor.py  init_db.py  monitor_hynix.py  monitor_nxt_conditions.py  payday_alert.py  portfolio_config.py  portfolio_monitor.py  quick_scan.py  run_collect.sh  run_debate.py  run_monitor.py  send_report.py  telegram_bot.py  test_run.py  validate_readonly_query.sh
tests/: test_categorizer.py  test_data_validator.py  test_database_operations.py  test_debate.py  test_fred.py  test_market_data.py  test_monitor.py  (+3 more)
(+72 files in other folders)
