[project]
name = "fin-advisor"
version = "0.1.0"
description = "Multi-agent investment advisory system with Streamlit dashboard"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "pandas-ta>=0.3.14b",
    "nltk>=3.8.1",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.2",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
